--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-annotated-doc==0.0.3
-annotated-types==0.7.0
-anyio==4.11.0
-click==8.3.0
-fastapi==0.120.4
-h11==0.16.0
-idna==3.11
-pydantic==2.12.3
-pydantic_core==2.41.4
-python-dotenv==1.2.1
-sniffio==1.3.1
-starlette==0.49.3
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uvicorn==0.38.0
+asgiref==3.8.1
+blinker==1.9.0
+click==8.2.1
+distlib==0.3.8
+Django==5.0.7
+filelock==3.13.4
+Flask==3.1.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+platformdirs==4.2.0
+setuptools==69.5.1
+sqlparse==0.5.0
+uv==0.2.28
+virtualenv==20.25.1
+Werkzeug==3.1.3
+wheel==0.43.0
