feat: implement comprehensive configuration management system
- Add Pydantic Settings for type-safe configuration
- Create Settings class with validation and computed properties
- Implement singleton pattern with lru_cache
- Add environment-specific configuration support
- Update FastAPI app to use centralized settings
- Add configuration testing script
- Document all settings in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,93 @@
-# Application
+# ============================================
+# APPLICATION SETTINGS
+# ============================================
 APP_NAME=DataPipeline Pro
-DEBUG=True
+DEBUG=true
 ENVIRONMENT=development
+API_VERSION=v1
+LOG_LEVEL=INFO
 
-# Database
+# ============================================
+# DATABASE SETTINGS
+# ============================================
+# Format: postgresql://username:password@host:port/database_name
+# Example: postgresql://admin:securepass123@localhost:5432/datapipeline
 DATABASE_URL=postgresql://user:password@localhost:5432/datapipeline
+DB_POOL_SIZE=5
+DB_MAX_OVERFLOW=10
+DB_ECHO=false
+DB_POOL_RECYCLE=3600
 
-# Redis
+# ============================================
+# REDIS SETTINGS
+# ============================================
+# Format: redis://host:port/db_number
+# Example: redis://localhost:6379/0
 REDIS_URL=redis://localhost:6379/0
+REDIS_MAX_CONNECTIONS=10
+REDIS_DECODE_RESPONSES=true
+REDIS_SOCKET_TIMEOUT=5
 
-# Security
+# ============================================
+# SECURITY SETTINGS
+# ============================================
+# CRITICAL: Generate a secure key with:
+# python -c "import secrets; print(secrets.token_urlsafe(32))"
+# NEVER commit your actual SECRET_KEY to version control!
 SECRET_KEY=your-secret-key-here-change-in-production
+
+# JWT Configuration
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
+BCRYPT_ROUNDS=12
+
+# ============================================
+# API SETTINGS
+# ============================================
+API_PREFIX=/api/v1
+
+# CORS Origins - comma-separated list
+# For development, typically includes frontend URLs
+# Example: http://localhost:3000,http://localhost:8000
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# Allowed Hosts - comma-separated list
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Rate Limiting
+RATE_LIMIT_PER_MINUTE=60
+
+# ============================================
+# KAFKA SETTINGS (Future Use)
+# ============================================
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+KAFKA_TOPIC_DATA_INGESTION=data-ingestion
+
+# ============================================
+# AWS SETTINGS (Future Use)
+# ============================================
+# Leave empty if not using AWS yet
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=
+
+# ============================================
+# MONITORING SETTINGS
+# ============================================
+# Sentry DSN for error tracking (optional)
+SENTRY_DSN=
+
+# Enable/disable metrics collection
+ENABLE_METRICS=true
+
+# ============================================
+# NOTES
+# ============================================
+# 1. Copy this file to .env and fill in your actual values
+# 2. Never commit .env to version control
+# 3. Keep .env.example updated as you add new settings
+# 4. Use strong, unique values for SECRET_KEY
+# 5. Set DEBUG=false in production
+# 6. Use environment-specific values for different deployments
