feat: setup PostgreSQL database with SQLAlchemy and Alembic
- Add docker-compose.yml for PostgreSQL and pgAdmin
- Configure SQLAlchemy with connection pooling
- Create User model with authentication fields
- Setup Alembic for database migrations
- Add database test suite
- Create database health check endpoints
- Add comprehensive database documentation

Database Features:
- Sync and async session support
- Connection pooling configured
- Migration system with Alembic
- User model with timestamps
- Database health monitoring
- Full CRUD test coverage

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,21 @@ ENABLE_METRICS=true
 # 4. Use strong, unique values for SECRET_KEY
 # 5. Set DEBUG=false in production
 # 6. Use environment-specific values for different deployments
+
+# ============================================
+# POSTGRESQL SETTINGS
+# ============================================
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=datapipeline_dev
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+# Database URL - Format: postgresql://user:password@host:port/database
+DATABASE_URL=postgresql://postgres:your_secure_password_here@localhost:5432/datapipeline_dev
+
+# ============================================
+# PGADMIN SETTINGS (Optional - for database UI)
+# ============================================
+PGADMIN_EMAIL=admin@datapipeline.com
+PGADMIN_PASSWORD=admin
